<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_sign_up_as_expert"
        android:title="@string/menu_sign_up_as_expert"
        android:visible="false" />
    <item
        android:id="@+id/nav_credit_shell"
        android:title="@string/menu_credit_shell" />
    <item
        android:id="@+id/nav_upcoming_booking"
        android:title="@string/menu_upcoming_booking" />
    <item
        android:id="@+id/nav_past_booking"
        android:title="@string/menu_past_booking" />
   <item
        android:id="@+id/nav_contact_admin"
        android:title="@string/menu_contact_admin" />
    <item
        android:id="@+id/nav_change_password"
        android:title="@string/menu_change_password" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout" />
</menu>
