<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/tv_personforcontact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:drawableRight="@drawable/down_arrow"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/perorcontact"
        android:textSize="@dimen/_13sdp"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/_15sdp"></TextView>

    <View
        android:id="@+id/div_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_personforcontact"
        android:background="@android:color/white" />
    <EditText
        android:id="@+id/tv_descriptio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/div_1"
        android:hint="@string/description"
        android:textSize="@dimen/_13sdp"
        android:background="@android:color/transparent"
        android:layout_marginRight="@dimen/_15sdp"></EditText>

    <View
        android:id="@+id/div_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_descriptio"
        android:background="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintVertical_bias="1.2"></com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>